# cgra_math

./: LICENSE  README.md  cgra_math.hpp  cgra_math.natvis
scripts/: matops.py  vecfns.py  vecops.py
tests/: .gitignore  CMakeLists.txt
tests/src/: CMakeLists.txt  generate_tests.py  main.cpp  math_basic_vec_test.cpp  math_test.cpp  math_test.hpp  test_angle_trigonometry_ functions.hpp  test_common_functions.hpp  test_exponential_functions.hpp  test_geometric_functions.hpp  test_notes.txt  test_operator_overloads.hpp  test_relational_functions.hpp  test_suite.hpp  vector_tests.json
